# local-budget

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: evals.md
docs/plans/: 2026-06-29-budget-true-agent-design.md  2026-06-29-phase0-one-db-authorizer.md  2026-06-29-phase1-dewire-agentdb.md  2026-06-29-phase2-mcp-server-render.md  2026-06-29-phase3-write-tools.md  2026-06-29-phase4-skills.md  2026-06-29-phase5-evals.md  2026-07-05-conversational-numbered-drilldown-design.md  2026-07-05-drilldown-tabular-and-followup-design.md  (+5 more)
ops/: README.md  budget-intake.sh  com.local-budget.intake.plist.template  install-intake-watch.sh
scripts/: eval.py  eval_gen_corpus.py  eval_seed.py  secret-scan.sh
spikes/: RESULTS.md  spike_oq4_subscription.py  spike_oq5_tool_denial.py
tests/: conftest.py  ofx_fixtures.py  test_agent_connect.py  test_agent_tools.py  test_backup.py  test_categories.py  test_csv.py  test_db.py  test_detect.py  test_import.py  test_inbox_adapter.py  test_intake_dedup.py  test_manual_categorize.py  test_mcp_server.py  test_money.py  test_normalize.py  test_parse_hostile.py  test_read_tools_phase4.py  test_render.py  test_report_charts.py  test_report_flags.py  test_report_palette.py  test_report_pdf.py  test_reports.py  test_sanitize.py  test_security.py  test_skills_lint.py  test_subcategories.py  test_subscription_rollup.py  test_web.py  test_write_tools.py
tests/evals/: specs.py  (+7 more)
(+70 files in other folders)
